
=item 0.16 - 03/10/98

Paul Henson <henson@acm.org> takes over maintenance of DCE-Perl from Doug
MacEachern, who is off in consultant-land earning lots of beer.


Added new method to Registry class to obtain default registry handle:

     ($rgy, $status) = DCE::Registry->site_default();


Added patch from Joel Murphy <jmurphy@cnu.acsu.buffalo.edu> to fix
gcc-ism of declaring variable size arrays on the stack.


=item 0.15 - 06/22/97

applied patches from Paul Whaley <whaley@ucs.ubc.ca> for solaris sanity
and other cleanups

got rid of ugly `config' file

fix bug in DCE::ACL::entry->entry_info to use SvOK not SvTRUE thanks to Paul Henson

added configuration tips for DEC from Paul Henson

=item 0.14 11/19/96

added DFS fix to DCE::ACL->bind from Paul Henson

added Solaris fix to aclbase.xs from Paul Henson

move location of perl include files to avoid warnings of 
'TRUE' and 'FALSE' being redefined

=item 0.13

if any method that needs an ACL manager uuid, does not get one, the underlying
C code will do a sec_acl_get_manager_types, using the first one returned.

DCE::ACL::entry->entry_info now deals with foreign_user and foreign_group

started cleaning and moving *.t scripts into t/ so we can 'make test'

DCE::ACL::entry->add now checks to make sure the entry does not already exist

Added DCE::ACL::handle->new_list method

Renamed classes in DCE::ACL package, will not disturb any existing code

Added DCE::Registry->domain method
$domain = $rgy->domain("user"); #returns 0
$domain = $rgy->domain("group"); #returns 1

Added aliases for DCE::Registry->domain_*
$rgy->p; #domain_person
$rgy->g; #domain_group
$rgy->o; #domain_org

If DCE::Registry->site_binding_get_info is called in a scalar context,
only the cell_name is returned

If any DCE::Registry->pgo_*_to_* method is called in a scalar context,
the status value will not be returned e.g.
$uuid = $rgy->pgo_name_to_id($uuid)

All the DCE::Registry->*_bind* method now default to "" for the cell_name